[metadata]
name = LeBarista
version = 0.2.0
description = A Slack notifications helper tool.
author = Tnarik Innael
author_email = tnarik@lecafeautomatique.co.uk

license = file:LICENSE.txt
ong_description = file:README.md

keywords = slack, notifications
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

url = https://github.com/tnarik/lebarista

[options]
py_modules = lebarista
#packages=["lebarista"],
include_package_data = True
install_requires =
    slackclient
    PyYAML